Added shopping list

--- a/src/app/recipies/recipies.component.html
+++ b/src/app/recipies/recipies.component.html
@@ -1,2 +1,4 @@
-<h3>Welcome to Recipies...</h3>
-<app-recipies-list></app-recipies-list>
+<div class="recipes-wrapper">
+    <h3>Recipes</h3>
+    <app-recipies-list></app-recipies-list>
+</div>
