--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,13 @@
-<p>shopping-edit works!</p>
+<div class="edit-wrapper">
+    <div class="input-contents">
+        <label for="Name">Name</label>
+        <input type="text">
+        <label for="Amount">Amount</label>
+        <input type="text">
+    </div>
+    <div class="btn-contents">
+        <button id="add-btn">Add</button>
+        <button id="edit-btn">Delete</button>
+        <button id="clear-btn">Clear</button>
+    </div>
+</div>
