--- a/src/app/recipies/recipies-list/recipies-list.component.scss
+++ b/src/app/recipies/recipies-list/recipies-list.component.scss
@@ -1,4 +1,5 @@
 .form{
+    width: 98%;
     font-family: 'Montserrat',sans-serif;
     display: flex;
     justify-content: center;
@@ -45,14 +46,13 @@
 }
 .container{
     font-family: 'Montserrat',sans-serif;
-    width: 100%;
     padding: 1em;
     min-width: 800px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     .recipe-wrapper{
-        transition: all .4s;
+        transition: all .3s;
         cursor: pointer;
         width: 23%;
         box-shadow: 0px 0px 3px 1px rgba(0,0,0,.2);
@@ -61,6 +61,7 @@
         img{
             border-radius: .5em .5em 0 0;
             width: 100%;
+            height: 14em;
         }
         .recipe-contents{
             display: flex;
@@ -71,6 +72,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-start;
+                margin-bottom: 1em;
                 label{
                     font-size: 1.1em;
                     margin-right: 1em;
