--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-        <a href="#">Recipes</a>
-        <a href="#">Shopping List</a>
+        <a href="#" (click)="gonav('recipe')">Recipes</a>
+        <a href="#" (click)="gonav('shopping')">Shopping List</a>
     </div>
     <div class="dropdwon-wrapper">
         <button>Manage <i class="fas fa-caret-down"></i></button>
