--- a/src/app/recipies/recipies-list/recipies-list.component.html
+++ b/src/app/recipies/recipies-list/recipies-list.component.html
@@ -1,20 +1,9 @@
-<div class="form">
-    <div class="add-recipe-wrapper">
-        <div class="add-content">
-            <label for="">Name</label>
-            <input type="text" [(ngModel)] = "name">
-        </div>
-        <div class="add-content">
-            <label for="">Description</label>
-            <input type="text" [(ngModel)] = "desc">
-        </div>
-        <div class="add-content">
-            <label for="">Image path</label>
-            <input type="text" [(ngModel)] = "imagepath">
-        </div>
-        <button (click)="AddRecipe()">Add</button>
-    </div>
+<div class="add-btn">
+    <button (click)="addbtn_clicked()">Add Recipe</button>
 </div>
+<app-recipe-add 
+    *ngIf="clicked"
+    (addItems)="addrecipe($event)"></app-recipe-add>
 <div class="container">
     <div class="recipe-wrapper" *ngFor = "let recipe of recipes" (click)="showDiv()">
         <div class="display" *ngIf = "show; else showthis">
