--- a/src/app/recipies/recipies-list/recipies-list.component.scss
+++ b/src/app/recipies/recipies-list/recipies-list.component.scss
@@ -1,48 +1,16 @@
-.form{
-    width: 98%;
-    font-family: 'Montserrat',sans-serif;
+.add-btn{
     display: flex;
-    justify-content: center;
-    .add-recipe-wrapper{
-        padding: 1em;
-        border: 2px solid gainsboro;
-        border-radius: .4em;
-        width: 35%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        .add-content{
-            display: flex;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 1em;
-            label{
-                font-size: 1.2em;
-                width: 10em;
-            }
-            input{
-                margin-left: 3em;
-                border: 2px solid cornflowerblue;
-                outline: none;
-                border-radius: .3em;
-                width: 20em;
-                padding: .3em;
-                font-size: 1.2em;
-            }
-        }
-        button{
-            margin-top: 1em;
-            margin-left: 3em;
-            text-align: center;
-            background: coral;
-            width: 20em;
-            padding: .3em;
-            font-size: 1.2em;
-            border: none;
-            border-radius: .3em;
-            box-shadow: 0px 0px 1px 1px rgba(0,0,0,.2);
-        }
-    }   
+    button{
+        margin-left: 88%;
+        background: lightseagreen;
+        border: none;
+        outline: none;
+        border-radius: .3em;
+        color: #fff;
+        padding: .5em;
+        font-size: 1.4em;
+        cursor: pointer;
+    }
 }
 .container{
     font-family: 'Montserrat',sans-serif;
@@ -70,18 +38,19 @@
             .contents{
                 width: 100%;
                 display: flex;
-                align-items: center;
                 justify-content: flex-start;
                 margin-bottom: 1em;
                 label{
+                    width: 42%;
                     font-size: 1.1em;
                     margin-right: 1em;
-                    font-weight: 500;
+                    font-weight: 600;
                 }
                 h3{
+                    width: 58%;
                     font-size: 1.1em;
-                    font-weight: 500;
-                    color: rgb(247, 76, 133);
+                    font-weight: 600;
+                    color: coral;
                 }
             }
         }
@@ -91,5 +60,4 @@
             box-shadow: 0px 0px 10px 1px rgba(0,0,0,.2);
         }
     }
-    
 }
