--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,13 +1,9 @@
 <div class="edit-wrapper">
     <div class="input-contents">
         <label for="Name">Name</label>
-        <input type="text">
+        <input type="text" #name>
         <label for="Amount">Amount</label>
-        <input type="text">
-    </div>
-    <div class="btn-contents">
-        <button id="add-btn">Add</button>
-        <button id="edit-btn">Delete</button>
-        <button id="clear-btn">Clear</button>
+        <input type="text" #amount>
+        <button id="add-btn" (click)="addItems()"><i class="fas fa-plus"></i> Add</button>
     </div>
 </div>
