--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.scss
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.scss
@@ -21,15 +21,12 @@
             border-radius: .4em;
             font-size: 1.3em;
         }
-    }
-    .btn-contents{
-        display: flex;
         button{
             transition: all .3s;
             color: #fff;
+            background: cornflowerblue;
             width: 5em;
             margin-right: 3em;
-            margin-top: 1em;
             text-align: center;
             font-size: 1.3em;
             padding: .4em;
@@ -41,8 +38,5 @@
                 transform: scale(1.05)
             }
         }
-        #edit-btn{ background: rgb(247, 41, 109); }
-        #add-btn{ background: lightgreen; }
-        #clear-btn{ background: cornflowerblue; }
     }
 }
